- MenuConfig, flexibleres erstellen von Menüpunkten in Komponenten 2
- Zurück Button
- Volltextsuche bei änderung neu indizieren                        4
- mögliche wildcards im RTE anzeigen                               1
- Bearbeitbare Mails für neue Benutzer usw                         4

== 2.2 ==
Erstellt: 21.06.11
Stable: 
Neue Features:

möglicherweise nicht kompatible Änderungen:
- User_Box: aufgeteilt in zwei komponenten, wenn eingeloggt LoggedIn Unterkomponente

== 2.1 ==
Erstellt: 21.06.11
Stable: 21.06.11
Neue Features
- MultiCheckbox in Dynamischen Formularen

möglicherweise nicht kompatible Änderungen:

== 2.0 ==
Erstellt: 20.12.10
Stable: 03.03.11
Neue Features
- RTE mit tinymce unterstützung
- Component Cache Neu, Url Cache, ProcessInput Cache
- HtmlEditor: enableBlocks setting gibts nicht mehr, wurde in FormatBlock plugin ausgelagert und
  müsste manuell zu plugins hinzugefügt werden (bevorzugt wird Text-Komponente!)
- simple /sitemap.xml, ohne änderungsdatum (bei Komponentenweb immer aktiv)
- /robots.txt (bei Komponentenweb immer aktiv)

möglicherweise nicht kompatible Änderungen:
- Helper: Statt $this->ifHasContent($component) muss man if ($this->hasContent($component)) schreiben
- partials view Helper: 2. Parameter (partialClass) wurde entfernt
- Master.tpl muss $this->componentWithMaster($this->componentWithMaster) für die Haupt-Komponente verwenden
- generators: box priority wurde entfernt
- Image Resizing: exif drehung wird jetzt berücksichtigt

== 1.11 ==
Erstellt: 17.08.10
Stable: 03.03.11
Neue Features:
- Vps_Date, Vps_DateTime
- CopyContent
- editComponents geht jetzt auch mit Table Generator
- MultiCheckbox: Alle / keine Links (standardmäßig aktiv)
- Volltextsuche
- Model_Mongo
- Model_MirrorCacheSimple
- AccessByMail Plugin
- (Multi)-FileUpload per html5 wenn moeglich, incl drag&drop support
- Doppeltes bearbeiten von zB Directories ist mittels extConfigControllerIndex deaktivierbar

möglicherweise nicht kompatible Änderungen: